@@ -1,31 +1,42 @@
 <!--
-  ~ This file is part of the LIRe project: http://www.semanticmetadata.net/lire
-  ~ LIRe is free software; you can redistribute it and/or modify
+  ~ This file is part of the LIRE project: http://www.semanticmetadata.net/lire
+  ~ LIRE is free software; you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
   ~ the Free Software Foundation; either version 2 of the License, or
   ~ (at your option) any later version.
   ~
-  ~ LIRe is distributed in the hope that it will be useful,
+  ~ LIRE is distributed in the hope that it will be useful,
   ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~ GNU General Public License for more details.
   ~
   ~ You should have received a copy of the GNU General Public License
-  ~ along with LIRe; if not, write to the Free Software
+  ~ along with LIRE; if not, write to the Free Software
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   ~
-  ~ We kindly ask you to refer the following paper in any publication mentioning Lire:
+  ~ We kindly ask you to refer the any or one of the following publications in
+  ~ any publication mentioning or employing Lire:
   ~
   ~ Lux Mathias, Savvas A. Chatzichristofis. Lire: Lucene Image Retrieval –
   ~ An Extensible Java CBIR Library. In proceedings of the 16th ACM International
   ~ Conference on Multimedia, pp. 1085-1088, Vancouver, Canada, 2008
+  ~ URL: http://doi.acm.org/10.1145/1459359.1459577
   ~
-  ~ http://doi.acm.org/10.1145/1459359.1459577
+  ~ Lux Mathias. Content Based Image Retrieval with LIRE. In proceedings of the
+  ~ 19th ACM International Conference on Multimedia, pp. 735-738, Scottsdale,
+  ~ Arizona, USA, 2011
+  ~ URL: http://dl.acm.org/citation.cfm?id=2072432
+  ~
+  ~ Mathias Lux, Oge Marques. Visual Information Retrieval using Java and LIRE
+  ~ Morgan & Claypool, 2013
+  ~ URL: http://www.morganclaypool.com/doi/abs/10.2200/S00468ED1V01Y201301ICR025
   ~
   ~ Copyright statement:
-  ~ ~~~~~~~~~~~~~~~~~~~
-  ~ (c) 2002-2011 by Mathias Lux (mathias@juggle.at)
-  ~     http://www.semanticmetadata.net/lire
+  ~ ====================
+  ~ (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
+  ~  http://www.semanticmetadata.net/lire, http://www.lire-project.net
+  ~
+  ~ Updated: 20.04.13 11:04
   -->
 
 <project name="Lire" default="compile" basedir=".">
@@ -215,5 +226,16 @@
         <delete dir="${dist}/Lire-${versionstring}"/>
 
     </target>
+
+    <target name="index" depends="compile">
+        <!-- Note: This needs to be forked, otherwise multi threading won't work and the heap space will be exceeded soon. -->
+        <java classpathref="classpath.path" classname="net.semanticmetadata.lire.indexing.parallel.ParallelIndexer" fork="true" maxmemory="2048M">
+            <jvmarg line="-Xmx2048M -server"/>
+            <!-- adapt this argument to use your pictures -->
+            <arg line="-d ./testdata/ferrari -i ./idx-test -n 16"/>
+        </java>
+    </target>
+
+
 
 </project>
